--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port:8081
+
+spring.h2.console.enable=true
+spring.sql.init.platform=h2
+spring.datasource.url=jdbc:h2:mem:commerce
+spring.datasource.user=sa
+spring.datasource.password=
