Alterações nas classes EnderecoDTO, EnderecoServiceImpl, EnderecoEntity, PacienteServiceImpl, pom.xml e application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,10 @@
-server.port:8081
-
 spring.h2.console.enable=true
 spring.sql.init.platform=h2
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:checkpointEquipe08
-
-##Para salvar os dados no banco, usar o código da linha de baixo##
-#spring.datasource.url=jdbc:h2:file:~/checkpointEquipe08#
-
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=
-
 spring.jpa.hibernate.ddl-auto=create-drop
-
-##Para salvar os dados no banco, usar o código da linha de baixo##
-#spring.jpa.hibernate.ddl-auto=update#
-
 spring.jpa.show-slq=true
 spring.jpa.properties.hibernate.format_sql=true
+server.port:8081
