--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-slq=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port:8081
+#server.error.whitelabel.enabled=false
